# Coc-nb-bot

./: .breakpoints  Cocánb.klc  README.md  acknowledgements.py  cocanb.py  cocanb.rar  example.draw  keep_alive.py  main.py  moderation.py  neverSleep.py  pyproject.toml  translator.py  unicode.py
.cache/replit/: __replit_disk_meta.json
Resources/: al-Qurʾān.txt  kaczynski_quotes.txt  quran_arabic.txt  test.docx
Translate/: toc.py  translator.py
Unused/: change_prefix.txt  moderation  prefixes.json  toc.txt
