[tool.poetry]
name = "cocanb-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.15.0"
replit = "^2.0.0"
flask = "^1.1.2"
unidecode = "^1.2.0"
pytz = "^2021.3"
discord-components = "^2.1.2"
clipboard = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
